add:wounderful software webring

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,12 +17,12 @@ import Footer from '../components/footer.astro'
 
 <body>
   <Navbar />
+  <div class="-pt-4 -mt-10"><Footer /></div>
   <main class="mx-auto overflow-hidden bg-neutral-200 sm:h-full md:h-screen">
     <img
       src="Siravij-RedDepot.jpg"
       alt="It's Me,Siravij!"
-      class="-mt-auto mx-auto -mb-20 w-full pt-10 sm:-mt-72 lg:-mt-96"
+      class="-mt-auto mx-auto w-full pt-10 sm:-mt-72 lg:-mt-96"
     />
-    <style></style>
   </main>
 </body>
