--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="px-auto flex items-center rounded-xl bg-white px-4 pb-8 pt-12 text-sm text-gray-600 dark:bg-[#121212] dark:text-white sm:text-base md:px-6"
+  class="px-auto flex items-center space-x-2 rounded-xl bg-white px-4 pb-8 pt-12 text-sm text-gray-600 dark:bg-[#121212] dark:text-white sm:text-base md:px-6"
 >
   <div
     class="flex space-x-2 transition-transform duration-700 ease-in-out hover:rotate-[360deg]"
@@ -8,6 +8,17 @@
       <img src="/garten.svg" class="aspect-square w-6 sm:w-8" alt="webring" />
     </a>
   </div>
+  <div
+    class="flex space-x-2 transition-transform duration-700 ease-in-out hover:rotate-[360deg]"
+  >
+    <a href="https://webring.wonderful.software#siravijbb.me" title="webring"
+      ><img
+        src="/webring.svg"
+        class="aspect-square w-8 transition-transform duration-700 ease-in-out hover:rotate-[720deg]"
+        alt="webring"
+      /></a>
+  </div>
   <div class="mx-4 h-6 border-l-2 border-gray-300 sm:h-8"></div>
+
   <p>Copyright © {new Date().getFullYear()} Siravij Praevisavakij</p>
 </footer>
