Fix:capital letter

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from '../components/Navbar.astro'
 import Layout from '../components/layout.astro'
-import Footer from '../components/footer.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <head>
