--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -98,21 +98,15 @@ import FocusNav from '../components/script/focusnav.astro'
 
           <li>
             <a
-              href="/#Biography"
+              href="/about-me"
               class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white"
               >Biography</a
             >
           </li>
+
           <li>
             <a
-              href="/time"
-              class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white"
-              >Time</a
-            >
-          </li>
-          <li>
-            <a
-              href="#Contact"
+              href="/contact"
               class="block rounded py-2 pl-3 pr-4 text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white"
               >Contact</a
             >
