change:biography change:dark mode

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -18,41 +18,36 @@ import Footer from '../../components/Footer.astro'
 <Navbar />
 <body>
   <AishaB />
-  <main class="Maincon customFont mx-auto gap-4 rounded-xl shadow-xl">
+  <main
+    class="customFont mx-auto max-w-7xl gap-4 rounded-xl bg-[#332940] shadow-xl"
+  >
     <p>
       <p id="debutAnnment" class="text-center text-sm"></p>
       <div class="instructions">
         <h1 class="md:text-md text-center text-[1.1rem]">
-          Welcome to <span class="text-gradient">Aisha channel information</span
-          >
+          <span class="text-gradient">Siravij Praevisavakij biography</span>
         </h1>
         <div class="item-center md:text-md mx-auto text-sm">
           <p
-            class="mx-auto break-normal text-center text-[0.9rem] md:break-all md:text-[1.2rem]"
+            class="mx-auto break-normal text-center text-[0.9rem] dark:text-gray-100 md:break-all md:text-[1.2rem]"
           >
-            This website is build by <code>Siravij | สิราวิ้จจะบึ</code>
-          </p><p class="text-center sm:text-[0.9rem] md:text-[1rem]">
-            Data provided by <code>
-              <a
-                class="text-[0.7rem] md:text-[1rem]"
-                href="https://pusssinboots.notion.site/pusssinboots/Aisha-channel-information-9104e052397c405e8e39e5223b0ec335"
-                >Aisha Web Database By Puss</a
-              ></code
-            >
+            This website is build by <code>Siravij</code>
           </p>
         </div>
       </div>
 
       <div
-        class="mx-auto max-w-7xl rounded-lg bg-neutral-200 text-black sm:px-2 md:px-8 md:pb-20"
+        class="mx-auto rounded-lg bg-neutral-200 text-black dark:bg-[#121212] sm:px-2 md:px-0 md:pb-20"
       >
         <div
-          class="pb-auto mx-auto rounded-lg py-10 sm:block sm:px-2 md:flex md:px-8"
+          class="pb-auto mx-auto rounded-lg py-10 sm:block sm:px-2 md:flex md:px-0"
         >
           <div
-            class="item-center mx-auto flex-auto rounded-lg bg-white px-5 text-center shadow-xl hover:shadow-2xl"
+            class="item-center mx-auto flex-auto rounded-lg bg-white px-5 text-center shadow-xl hover:shadow-2xl dark:bg-[#332940]"
           >
-            <p class="pt-3 text-center text-2xl md:pt-2 md:text-lg">
+            <p
+              class="pt-3 text-center text-2xl dark:text-gray-100 md:pt-2 md:text-lg"
+            >
               Siravij Praevisavakij
             </p>
             <p>
@@ -66,29 +61,29 @@ import Footer from '../../components/Footer.astro'
             </p>
           </div>
           <div
-            class="mt-3 overflow-hidden text-ellipsis rounded-lg bg-white px-2 py-3 text-sm shadow-xl md:ml-2 md:mt-0 md:py-2 md:text-xl"
+            class="mt-3 overflow-hidden text-ellipsis rounded-lg bg-white px-2 py-3 text-sm shadow-xl dark:bg-[#332940] dark:text-gray-100 md:ml-2 md:mt-0 md:py-2 md:text-xl"
           >
-            <h1 class="text-center md:text-left">ข้อมูลทั่วไป</h1>
+            <h1 class="text-center md:text-left">Biography</h1>
             <p>
               <ol>
                 <li>
-                  - วันเกิด : 15/12/XXXX <p class="inline text-sm" id="result">
+                  Hello! Welcome to my website. My name is Siravij!
+                  <p>
+                    I'm a Sattlelite engineer at <a href="#" class=""
+                      >KNACKSAT2 TGPS</a>
+                  </p>
+                  <p>
+                    Also as Electronic and Coding Engineer at <a
+                      href="https://nbgears.tech"
+                      class="">NB GEARS</a>
+                  </p>
+                  <p>
+                    feel free to contact me! My available will be at <a
+                      href="/contact"
+                      class="">This page</a>
                   </p>
                 </li>
-                <li>- Lore: เป็นหุ่นยนต์Ai</li>
-                <li>- อิโมจิประจำตัว : 🐱, 💚</li>
-                <li>
-                  - แฟนเนม : กุ๊ปเปี้ยน(ส์)*/ Guppiens (มาจากคำว่ากุ๊ปป้า* และ
-                  โฮโมเซเปี้ยน)
-                </li>
-                <p class="text-sm">
-                  **สามารถสะกดคำว่าGuppiensในภาษาไทยได้ทั้ง กุ๊ปเปี้ยน และ
-                  กุ๊ปเปี้ยนส์
-                </p>
-                <p class="text-sm">
-                  *กุ๊ปป้า เป็นคำที่ไอช่าใช้เวลาเปิดคลิป/ทักทาย เช่น “กุ๊ปป้า!
-                  สวัสดีค่า เวอร์ช่วลไอดอลไอช่า มาแล้วค่า!”*
-                </p>
+
                 <p class="py-1">
                   <li>
                     <p class="inline items-center">
