--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -37,10 +37,10 @@ import Footer from '../../components/Footer.astro'
       </div>
 
       <div
-        class="mx-auto rounded-lg bg-neutral-200 text-black dark:bg-[#121212] sm:px-2 md:px-0 md:pb-20"
+        class="mx-auto rounded-lg bg-neutral-200 text-black dark:bg-[#121212] sm:px-2 md:px-2 md:pb-20"
       >
         <div
-          class="pb-auto mx-auto rounded-lg py-10 sm:block sm:px-2 md:flex md:px-0"
+          class="pb-auto mx-auto rounded-lg py-10 sm:block sm:px-2 md:flex md:px-8"
         >
           <div
             class="item-center mx-auto flex-auto rounded-lg bg-white px-5 text-center shadow-xl hover:shadow-2xl dark:bg-[#332940]"
@@ -70,17 +70,20 @@ import Footer from '../../components/Footer.astro'
                   Hello! Welcome to my website. My name is Siravij!
                   <p>
                     I'm a Sattlelite engineer at <a href="#" class=""
-                      >KNACKSAT2 TGPS</a>
+                      >KNACKSAT2 TGPS</a
+                    >
                   </p>
                   <p>
                     Also as Electronic and Coding Engineer at <a
                       href="https://nbgears.tech"
-                      class="">NB GEARS</a>
+                      class="">NB GEARS</a
+                    >
                   </p>
                   <p>
                     feel free to contact me! My available will be at <a
                       href="/contact"
-                      class="">This page</a>
+                      class="">This page</a
+                    >
                   </p>
                 </li>
 
