--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -19,7 +19,7 @@ import Footer from '../../components/Footer.astro'
 <body>
   <AishaB />
   <main
-    class="customFont mx-auto max-w-7xl gap-4 rounded-xl bg-[#332940] shadow-xl"
+    class="customFont mx-auto max-w-7xl gap-4 rounded-xl shadow-xl dark:bg-[#332940]"
   >
     <p>
       <p id="debutAnnment" class="text-center text-sm"></p>
@@ -72,14 +72,12 @@ import Footer from '../../components/Footer.astro'
                     I'm a Sattlelite engineer at <a href="#" class=""
                       >KNACKSAT2 TGPS</a
                     >
-                  </p>
-                  <p>
+
                     Also as Electronic and Coding Engineer at <a
                       href="https://nbgears.tech"
                       class="">NB GEARS</a
                     >
-                  </p>
-                  <p>
+
                     feel free to contact me! My available will be at <a
                       href="/contact"
                       class="">This page</a
