--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -3,6 +3,7 @@ import AishaB from '../../components/script/aishab.astro'
 import Navbar from '../../components/Navbar.astro'
 import Layout from '../../components/layout.astro'
 import Footer from '../../components/Footer.astro'
+import Contact from '../../components/Contact.astro'
 ---
 
 <head>
@@ -67,31 +68,19 @@ import Footer from '../../components/Footer.astro'
             <p>
               <ol>
                 <li>
-                  Hello! Welcome to my website. My name is Siravij!
-                  <p>
-                    I'm a Sattlelite engineer at <a href="#" class=""
-                      >KNACKSAT2 TGPS</a
-                    >
-
-                    Also as Electronic and Coding Engineer at <a
-                      href="https://nbgears.tech"
-                      class="">NB GEARS</a
-                    >
-
-                    feel free to contact me! My available will be at <a
-                      href="/contact"
-                      class="">This page</a
-                    >
+                  <p class="p-4">
+                    Siravij the electrical and website engineer nerd, who love
+                    to test the website speed and design electrical circuit.
                   </p>
                 </li>
 
                 <p class="py-1">
                   <li>
                     <p class="inline items-center">
-                      - สังกัด :
+                      - Project :
                       <a
-                        href="https://www.facebook.com/GAAICompany/"
-                        aria-label="Guardian Angel Ai Co Ltd Facebook Page"
+                        href="https://creatorsgarten.org/"
+                        aria-label="creatorsgarten Page"
                       >
                         <span
                           ><div
@@ -100,7 +89,7 @@ import Footer from '../../components/Footer.astro'
                             <img
                               class="p-auto mx-1 mb-1 inline h-5 w-auto items-center"
                               src="/garten.svg"
-                              alt="Guardian Angel Ai Co Ltd. Logo"
+                              alt="creatorsgarten. Logo"
                               height="fit"
                               width="auto"
                             />
@@ -112,43 +101,88 @@ import Footer from '../../components/Footer.astro'
                           </div>
                         </span>
                       </a>
+                      <span class="mx-2">
+                        <a
+                          href="https://nbgears.tech/"
+                          aria-label="NB GEARS Page"
+                        >
+                          <span
+                            ><div
+                              class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                            >
+                              <p
+                                class="mx-1 ml-3 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                              >
+                                NB GEARS
+                              </p>
+                            </div>
+                          </span>
+                        </a></span
+                      >
+                      <span class="">
+                        <a
+                          href="https://github.com/KNACKSAT2-TGPS"
+                          aria-label="KNACKSAT-2 TGPS Page"
+                        >
+                          <span
+                            ><div
+                              class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                            >
+                              <p
+                                class="mx-1 ml-3 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                              >
+                                KNACKSAT-2 TGPS
+                              </p>
+                            </div>
+                          </span>
+                        </a></span
+                      >
                     </p>
                   </li>
-                  <div class="grid grid-cols-2 py-4">
-                    <span>
-                      - papa : <a href="https://twitter.com/Nock3d">
-                        <p
-                          class="m-1 rounded-lg bg-neutral-200 p-2 text-center hover:bg-gray-400"
-                        >
-                          @Nock3d
-                        </p>
-                      </a>
-                      <a href="https://twitter.com/LIVINERA">
-                        <p
-                          class="m-1 rounded-lg bg-neutral-200 p-2 text-center hover:bg-gray-400"
-                        >
-                          @LIVINERA
-                        </p></a
+                  <li>
+                    <div class="mt-5 flex">
+                      <p class="mt-2 flex">- Contact :</p><Contact />
+                    </div>
+                  </li>
+                  <li>
+                    <div class="mt-5 flex">
+                      <p class="mt-2 flex">- My resume :</p>
+                      <a
+                        href="https://creatorsgarten.org/"
+                        aria-label="creatorsgarten Page"
+                        class="ml-1 mt-2"
                       >
-                    </span>
-                    <span
-                      >- mama :
-                      <a href="https://twitter.com/vpkmit">
-                        <p
-                          class="m-1 rounded-lg bg-neutral-200 p-2 text-center hover:bg-gray-400"
-                        >
-                          @vpkmit
-                        </p></a
-                      >
-                      <a href="https://twitter.com/mcmclunar">
-                        <p
-                          class="m-1 rounded-lg bg-neutral-200 p-2 text-center hover:bg-gray-400"
-                        >
-                          @mcmclunar
-                        </p>
+                        <span
+                          ><div
+                            class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                          >
+                            <p
+                              class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                            >
+                              Resume
+                            </p>
+                          </div>
+                        </span>
                       </a>
-                    </span>
-                  </div>
+                      <a
+                        href="https://creatorsgarten.org/"
+                        aria-label="creatorsgarten Page"
+                        class="ml-1 mt-2"
+                      >
+                        <span
+                          ><div
+                            class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                          >
+                            <p
+                              class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
+                            >
+                              CV
+                            </p>
+                          </div>
+                        </span>
+                      </a>
+                    </div>
+                  </li>
                 </p>
               </ol>
             </p>
