add:Sponsor Section

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -81,6 +81,13 @@ import FocusNav from '../components/script/focusnav.astro'
             >
               <li>
                 <a
+                  href="/project"
+                  class="block border-b-2 border-gray-700 px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+                  >All of my Project</a
+                >
+              </li>
+              <li>
+                <a
                   href="https://github.com/KNACKSAT2-TGPS"
                   class="block border-b-2 border-gray-700 px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
                   >KNACKSAT 2 TGPS</a
