fix:responsive issue on iphone

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -101,7 +101,7 @@ import Contact from '../../components/Contact.astro'
                           </div>
                         </span>
                       </a>
-                      <span class="mx-2">
+                      <span class="mx-2 space-y-4">
                         <a
                           href="https://nbgears.tech/"
                           aria-label="NB GEARS Page"
@@ -119,24 +119,15 @@ import Contact from '../../components/Contact.astro'
                           </span>
                         </a></span
                       >
-                      <span class="">
-                        <a
-                          href="https://github.com/KNACKSAT2-TGPS"
-                          aria-label="KNACKSAT-2 TGPS Page"
-                        >
-                          <span
-                            ><div
-                              class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
-                            >
-                              <p
-                                class="mx-1 ml-3 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
-                              >
-                                KNACKSAT-2 TGPS
-                              </p>
-                            </div>
-                          </span>
-                        </a></span
+                      <li
+                        class="mt-3 inline-flex rounded-lg bg-black p-2 text-white shadow-lg hover:shadow-xl"
                       >
+                        <p class="inline items-center text-white">
+                          <a href="https://github.com/KNACKSAT2-TGPS"
+                            ><span> KNACKSAT-2 TGPS</span>
+                          </a>
+                        </p>
+                      </li>
                     </p>
                   </li>
                   <li>
