updated:back link, script locatin changed?

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
   <div
     class="flex space-x-2 transition-transform duration-700 ease-in-out hover:rotate-[360deg]"
   >
-    <a href="https://webring.wonderful.software#siravijbb.me" title="webring"
+    <a href="https://webring.wonderful.software#siravijbb.com" title="webring"
       ><img
         src="/webring.svg"
         class="aspect-square w-8 transition-transform duration-700 ease-in-out hover:rotate-[360deg]"
