--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -3,7 +3,7 @@ import AishaB from '../../components/script/aishab.astro'
 import Navbar from '../../components/Navbar.astro'
 import Layout from '../../components/layout.astro'
 import Footer from '../../components/Footer.astro'
-import Contact from '../../components/Contact.astro'
+import Contact from '../../components/script/Contact.astro'
 ---
 
 <head>
