--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -139,25 +139,8 @@ import Contact from '../../components/script/Contact.astro'
                     <div class="mt-5 flex">
                       <p class="mt-2 flex">- My resume :</p>
                       <a
-                        href="https://creatorsgarten.org/"
-                        aria-label="creatorsgarten Page"
-                        class="ml-1 mt-2"
-                      >
-                        <span
-                          ><div
-                            class="inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
-                          >
-                            <p
-                              class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
-                            >
-                              Resume
-                            </p>
-                          </div>
-                        </span>
-                      </a>
-                      <a
-                        href="https://creatorsgarten.org/"
-                        aria-label="creatorsgarten Page"
+                        href="https://Siravijbb.com/SiravijP_CV.pdf"
+                        aria-label="CV"
                         class="ml-1 mt-2"
                       >
                         <span
