--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,10 +19,26 @@ import Footer from '../components/Footer.astro'
   <Navbar />
   <div class="-pt-4 -mt-10"><Footer /></div>
   <main class="mx-auto overflow-hidden bg-neutral-200 sm:h-full md:h-screen">
-    <img
-      src="Siravij-RedDepot.jpg"
-      alt="It's Me,Siravij!"
-      class="-mt-auto mx-auto w-full pt-10 sm:-mt-72 lg:-mt-96"
-    />
+    <div
+      class="relative flex h-screen w-full flex-col items-center justify-center overflow-hidden"
+    >
+      <div class="-mt-96 lg:-mt-96 pl-10 z-10 w-full text-left text-4xl text-white ">
+        <div class="bg-gray-900 w-fit p-4 rounded-xl">
+        Welcome to<b class="text-[#ab98ff] underline"
+          > Siravij's</b> Personal Website
+          <span class="block text-xl">I'm Siravij Praevisavakij</span>
+          <span class="block text-xl">Feel free to browse my website!</span></div>
+      </div>
+        
+      <div class="z-10 flex  text-white pl-10 text-left -mt-96 lg:-mt-96">
+        
+      </div><div class="absolute w-full">
+        <img
+        src="Siravij-RedDepot.jpg"
+        alt="It's Me,Siravij!"
+          class="w-full -mt-96 lg:-mt-80"
+          id="widget2"></img>
+      </div>
+    </div>
   </main>
 </body>
