fixed:unadded image

--- a/src/components/project/model2.astro
+++ b/src/components/project/model2.astro
@@ -65,6 +65,7 @@ import Contact from '../contact/Contact.astro'
       data-modal-toggle="Model2"
       class="h-full w-full py-2"
       type="button"
+      disabled
     >
       <div
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
@@ -73,7 +74,7 @@ import Contact from '../contact/Contact.astro'
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/member/webp/prasertsak.webp"
+            src="/team.webp"
             alt="avatar"
             height="auto"
             width="auto"
