--- a/src/components/project/model3.astro
+++ b/src/components/project/model3.astro
@@ -70,7 +70,7 @@
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/member/webp/satit.webp"
+            src="/KNACK2.jpg"
             alt="avatar"
             height="auto"
             width="auto"
