--- a/src/components/project/model4.astro
+++ b/src/components/project/model4.astro
@@ -67,10 +67,10 @@
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
         id="punroon"
       >
-        <div class="bg-gray-500">
+        <div class="bg-gray-500 sm:h-24 md:h-56">
           <img
-            class="mx-auto w-auto p-4 sm:h-24 md:h-56"
-            src="/favicon.webp"
+            class="mx-auto w-auto sm:h-24 md:h-56"
+            src="/E2-Gmod-random.png"
             alt="avatar"
             height="auto"
             width="auto"
