--- a/src/components/project/model5.astro
+++ b/src/components/project/model5.astro
@@ -64,6 +64,7 @@
       data-modal-toggle="Model5"
       class="h-full w-full py-2"
       type="button"
+      disabled
     >
       <div
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
@@ -72,8 +73,7 @@
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/member/webp/siravij.webp"
-            alt="avatar"
+
             height="fit-content"
             width="fit-content"
           />
