--- a/src/components/project/model9.astro
+++ b/src/components/project/model9.astro
@@ -70,8 +70,7 @@
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/member/webp/chayachon.webp"
-            alt="avatar"
+
             height="auto"
             width="auto"
           />
@@ -107,6 +106,7 @@
             type="button"
             class="ml-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-white"
             data-modal-hide="model9"
+            disabled
           >
             <svg
               class="h-3 w-3"
