--- a/src/components/project/project1.astro
+++ b/src/components/project/project1.astro
@@ -62,6 +62,7 @@
       data-modal-toggle="Model1"
       class="h-full w-full py-2"
       type="button"
+      disabled
     >
       <div
         class="overflow-hidden rounded-lg bg-white shadow-lg hover:bg-neutral-200 hover:shadow-2xl"
@@ -70,8 +71,7 @@
         <div class="bg-gray-500">
           <img
             class="mx-auto w-auto sm:h-24 md:h-56"
-            src="/full-body.webp"
-            alt="avatar"
+
             height="auto"
             width="auto"
           />
